--- a/mainpage.dox
+++ b/mainpage.dox
@@ -1,5 +1,7 @@
 /*! \mainpage Título de la página principal
 
+Práctica realizada por Víctor del Pino Sánchez y Jesús Ortega Bretón
+
 # Introducción
 
 Se han realizado dos proyectos, cifras, en la carpeta cifras y letras, en la carpeta letras.
